# pinecone-rust

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: bl602-gpio-blinky.rs
src/: main.rs
