[package]
name = "bl602-rust-guide"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8"
panic-halt = "0.2"
riscv = "0.6"

[dependencies.bl602-hal]
git = "https://github.com/sipeed/bl602-hal"
branch = "main"
# path = "../bl602-hal"
